# CppChessBot

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessGUI.cpp  ChessGUI.h  ChessGame.cpp  ChessGame.h  ChessPiece.cpp  ChessPiece.h  Makefile  PieceType.h  Player.cpp  Player.h  README.md  main.cpp
AI/: AI.cpp  AI.h  PieceSqTable.h
Pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
Tests/: BishopTest.cpp  KingTest.cpp  KnightTest.cpp  PawnTest.cpp  QueenTest.cpp  RookTest.cpp
UI/: ConsoleDisplay.cpp  ConsoleDisplay.h  GDisplay.cpp  GDisplay.h  IDisplay.h
resources/: settings.ini
src/: ChessBoard.h  ChessGame.cpp  ChessGame.h  main.cpp
src/AI/: AI.cpp  AI.h  PieceSqTable.h
src/Chess/: ChessBoard.cpp  ChessBoard.h  PieceType.h
src/Config/: Config.cpp  Config.h
src/Thread/: ThreadPool.cpp  ThreadPool.h
src/UI/: ConsoleDisplay.cpp  ConsoleDisplay.h  GDisplay.cpp  GDisplay.h  IDisplay.h
src/Utils/: ctz.h
